--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/20220524_190741.png" rel="icon">
-  <link href="assets/img/20220524_190741.png" rel="apple-touch-icon">
+  <link href="assets/img/20220525_233144.png" rel="icon">
+  <link href="assets/img/20220525_233144.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -39,25 +39,25 @@
         <span></span>
       </button>
          
-      <a href="index.html" class="logo"><img src="assets/img/20220524_190741.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/20220525_233144.png" alt="" class="img-fluid"></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="blog-grid.html">Services</a>
+            <a class="nav-link " href="blog-grid.html">Products</a>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">glaray</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Glaray</a>
             <div class="dropdown-menu">
               <a class="dropdown-item " href="blog-grid.html">Sitt cooking oil</a>
               <a class="dropdown-item " href="blog-grid.html">beauty products</a>
@@ -67,7 +67,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="contact.html">Contact</a>
+            <a class="nav-link " href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -112,10 +112,9 @@
               <img src="assets/img/slide-about-1.jpg" alt="" class="img-fluid">
             </div>
             <div class="sinse-box">
-              <h3 class="sinse-title">Kila Lubricants Company <br>was established in the year …
-                <span></span>
-                <br>  The company’s<br> headquarters is located in ….
-              </h3>
+              <h4>Kila Lubricants Company was established in the  year 1998<br>
+                 The company’s headquarters is located in Alhasahisa
+              </h4>
               
             </div>
           </div>
@@ -133,7 +132,7 @@
                 <div class="title-box-d">
                   <h3 class="title-d">Vision
                     <span class="color-d">the message</span>
-                    <br> Objectives.
+                    <br> Objectives :-
                   </h3>
                 </div>
                 <p class="color-text-a">
@@ -380,20 +379,20 @@
                 <a href="#">About</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Services</a>
+                <a href="#">Products</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">glaray</a>
+                <a href="#">Glaray</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="#">Contact Us</a>
               </li>
             </ul>
           </nav>
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/kilacompany/">
                   <i class="bi bi-facebook" aria-hidden="true"></i>
                 </a>
               </li>
@@ -418,7 +417,7 @@
           <div class="w-footer-a">
             <ul class="list-unstyled">
               <li class="color-a">
-                <span class="color-text-a">Email :</span> kilacompany0@gmail.com
+                <span class="color-text-a">Email :</span> kailacompany0@gmail.com
               </li>
               <li class="color-a">
                 <span class="color-text-a">Phone :</span>0922223333 
@@ -439,6 +438,12 @@
       </div>
     </div>
   </footer><!-- End  Footer -->
+
+  <div class="chating">
+    <div class="chat-item">
+      <a href="https://wa.me/message/DQNKFZ5AYYCSH1"><i class="bi bi-whatsapp"></i></a>
+    </div>
+  </div>
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
