--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,16 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kila Oils Company - Contact</title>
+  <title>Kila Oils Company - Contact Us</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/" rel="icon">
-  <link href="assets/img/" rel="apple-touch-icon">
+  <link href="assets/img/20220525_233144.png" rel="icon">
+  <link href="assets/img/20220525_233144.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -37,13 +37,13 @@
         <span></span>
       </button>
          
-      <a href="index.html" class="logo"><img src="assets/img/20220524_190741.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/20220525_233144.png" alt="" class="img-fluid"></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
           </li>
 
           <li class="nav-item">
@@ -51,11 +51,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="blog-grid.html">Services</a>
+            <a class="nav-link " href="blog-grid.html">Products</a>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">glaray</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Glaray</a>
             <div class="dropdown-menu">
               <a class="dropdown-item " href="blog-grid.html">Sitt cooking oil</a>
               <a class="dropdown-item " href="blog-grid.html">beauty products</a>
@@ -65,7 +65,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="contact.html">Contact</a>
+            <a class="nav-link active" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
                   <a href="index.html">Home</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">
-                  Contact
+                  Contact Us
                 </li>
               </ol>
             </nav>
@@ -152,7 +152,7 @@
                   </div>
                   <div class="icon-box-content table-cell">
                     <div class="icon-box-title">
-                      <h4 class="icon-title">Say Hello</h4>
+                      <h4 class="icon-title">Text Us</h4>
                     </div>
                     <div class="icon-box-content">
                       <p class="mb-1">Email:
@@ -243,20 +243,20 @@
               <a href="#">About</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Services</a>
+              <a href="#">Products</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">glaray</a>
+              <a href="#">Glaray</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Contact</a>
+              <a href="#">Contact Us</a>
             </li>
           </ul>
         </nav>
         <div class="socials-a">
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/kilacompany/">
                 <i class="bi bi-facebook" aria-hidden="true"></i>
               </a>
             </li>
@@ -281,7 +281,7 @@
         <div class="w-footer-a">
           <ul class="list-unstyled">
             <li class="color-a">
-              <span class="color-text-a">Email :</span> kilacompany0@gmail.com
+              <span class="color-text-a">Email :</span> kailacompany0@gmail.com
             </li>
             <li class="color-a">
               <span class="color-text-a">Phone :</span>0922223333 
@@ -302,6 +302,11 @@
     </div>
   </div>
 </footer><!-- End  Footer -->
+<div class="chating">
+  <div class="chat-item">
+    <a href="https://wa.me/message/DQNKFZ5AYYCSH1"><i class="bi bi-whatsapp"></i></a>
+  </div>
+</div>
 
 
   <div id="preloader"></div>
