--- a/about.html
+++ b/about.html
@@ -57,13 +57,14 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Glaray</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item " href="blog-grid.html">Sitt cooking oil</a>
-              <a class="dropdown-item " href="blog-grid.html">beauty products</a>
-              <a class="dropdown-item " href="blog-grid.html">candles</a>
-              <a class="dropdown-item " href="blog-grid.html">soap</a>
+              <a class="dropdown-item " href="blog-grid.html">Alsitt cooking oil</a>
+              <a class="dropdown-item " href="blog-grid.html">Beauty products</a>
+              <a class="dropdown-item " href="blog-grid.html">Candles</a>
+              <a class="dropdown-item " href="blog-grid.html">Soap</a>
               <a class="dropdown-item " href="blog-grid.html">Waste is used</a>
+              <a class="dropdown-item " href="blog-grid.html">Farm</a>
             </div>
           </li>
           <li class="nav-item">
@@ -84,7 +85,8 @@
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
-              <h1 class="title-single">From the seed to life</h1>
+              <h1 class="title-single">About Us</h1>
+              <span class="color-text-a">From the seed to life</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -373,19 +375,19 @@
           <nav class="nav-footer">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="about.html">About</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Products</a>
+                <a href="blog-grid.html">Products</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Glaray</a>
+                <a href="blog-grid.html">Gallery</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
