--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Glaray</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item " href="blog-grid.html">Sitt cooking oil</a>
-              <a class="dropdown-item " href="blog-grid.html">beauty products</a>
-              <a class="dropdown-item " href="blog-grid.html">candles</a>
-              <a class="dropdown-item " href="blog-grid.html">soap</a>
+              <a class="dropdown-item " href="blog-grid.html">Alsitt cooking oil</a>
+              <a class="dropdown-item " href="blog-grid.html">Beauty products</a>
+              <a class="dropdown-item " href="blog-grid.html">Candles</a>
+              <a class="dropdown-item " href="blog-grid.html">Soap</a>
               <a class="dropdown-item " href="blog-grid.html">Waste is used</a>
+              <a class="dropdown-item " href="blog-grid.html">Farm</a>
             </div>
           </li>
           <li class="nav-item">
@@ -235,7 +236,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-grid.html"> Sitt cooking oil
+                        <a href="blog-grid.html"> AlSitt Cooking Oil
                           <br> </a>
                       </h2>
                     </div>
@@ -257,7 +258,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-grid.html">beauty products
+                        <a href="blog-grid.html">Beauty products
                           <br> </a>
                       </h2>
                     </div>
@@ -279,7 +280,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="blog-grid.html">candles
+                        <a href="blog-grid.html">Candles
                           <br> </a>
                       </h2>
                     </div>
@@ -303,7 +304,7 @@
                     </div>
                     <div class="card-title-b">
                       <h2 class="title-2">
-                        <a href="#"> soap
+                        <a href="#"> Soap
                           <br> </a>
                       </h2>
                     </div>
@@ -411,19 +412,19 @@
           <nav class="nav-footer">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">About</a>
+                <a href="about.html">About</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Products</a>
+                <a href="blog-grid.html">Products</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Glaray</a>
+                <a href="blog-grid.html">Gallery</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
               </li>
             </ul>
           </nav>
