--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,14 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Glaray</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item " href="blog-grid.html">Sitt cooking oil</a>
-              <a class="dropdown-item " href="blog-grid.html">beauty products</a>
-              <a class="dropdown-item " href="blog-grid.html">candles</a>
-              <a class="dropdown-item " href="blog-grid.html">soap</a>
+              <a class="dropdown-item " href="blog-grid.html">Alsitt cooking oil</a>
+              <a class="dropdown-item " href="blog-grid.html">Beauty products</a>
+              <a class="dropdown-item " href="blog-grid.html">Candles</a>
+              <a class="dropdown-item " href="blog-grid.html">Soap</a>
               <a class="dropdown-item " href="blog-grid.html">Waste is used</a>
+              <a class="dropdown-item " href="blog-grid.html">Farm</a>
             </div>
           </li>
           <li class="nav-item">
@@ -82,8 +83,8 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Contact US</h1>
-             <!--<span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.</span>
-            --> </div>
+             <span class="color-text-a">We Are Very Pleased To Contact You</span>
+             </div>
           </div>
           <div class="col-md-12 col-lg-4">
             <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
@@ -237,19 +238,19 @@
         <nav class="nav-footer">
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a href="#">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">About</a>
+              <a href="about.html">About</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Products</a>
+              <a href="blog-grid.html">Products</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Glaray</a>
+              <a href="blog-grid.html">Gallery</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Contact Us</a>
+              <a href="contact.html">Contact Us</a>
             </li>
           </ul>
         </nav>
