--- a/arabic/blog-grid.html
+++ b/arabic/blog-grid.html
@@ -96,7 +96,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box"style="padding: 40px;">
               <h1 class="title-single">منتجاتنا</h1>
-              <span class="color-text-a">منتجاتنا الرائعة</span>
+              <span class="color-text-a">قائمة متنوعة لمنتجات شركة كيلا</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -123,7 +123,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-1.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-1216597992-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -142,7 +142,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-2.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-liana-horodetska-8709601.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -161,7 +161,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-3.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-rene-asmussen-1405520.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -180,7 +180,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-4.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-tabitha-mort-773252.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -199,7 +199,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-5.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-875237010-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -218,7 +218,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-6.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-958953510-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
