--- a/arabic/contact.html
+++ b/arabic/contact.html
@@ -94,7 +94,8 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box"style="padding: 40px;">
               <h1 class="title-single">تواصل معنا</h1>
-             <span class="color-text-a">نسعد جدا بتواصلك معنا</span>
+             <span class="color-text-a">للطلب أو الاستفسار و
+              لمعرفة  المزيدعنا تواصل معنا</span>
              </div>
           </div>
           <div class="col-md-12 col-lg-4">
