--- a/blog-grid.html
+++ b/blog-grid.html
@@ -94,7 +94,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Products</h1>
-              <span class="color-text-a">Our Amazing Products</span>
+              <span class="color-text-a">A varied list of Kela's products</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -120,14 +120,14 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-1.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-958953510-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
                   
                   <div class="card-title-b">
                     <h2 class="title-2">
-                      <a href="blog-single.html">Farm
+                      <a href="blog-single.html">Insecticide
                         </a>
                     </h2>
                   </div>
@@ -139,7 +139,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-2.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-liana-horodetska-8709601.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -158,7 +158,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-3.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-rene-asmussen-1405520.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -177,7 +177,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-4.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/pexels-tabitha-mort-773252.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
@@ -196,14 +196,14 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-5.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-875237010-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
                   
                   <div class="card-title-b">
                     <h2 class="title-2">
-                      <a href="blog-single.html">Waste is used
+                      <a href="blog-single.html">fodder for cow
                         </a>
                     </h2>
                   </div>
@@ -215,7 +215,7 @@
           <div class="col-md-4">
             <div class="card-box-b card-shadow news-box">
               <div class="img-box-b">
-                <img src="assets/img/post-6.jpg" alt="" class="img-b img-fluid">
+                <img src="assets/img/istockphoto-1216597992-612x612.jpg" alt="" class="img-b img-fluid">
               </div>
               <div class="card-overlay">
                 <div class="card-header-b">
