--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,8 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Contact US</h1>
-             <span class="color-text-a">We Are Very Pleased To Contact You</span>
+             <span class="color-text-a">To order or inquire, and
+              To find out more about us, contact us</span>
              </div>
           </div>
           <div class="col-md-12 col-lg-4">
