--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kila Oils Company</title>
+  <title>Kila Group</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -14,7 +14,7 @@
   <link href="assets/img/20220524_190741.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -92,7 +92,7 @@
                       <br> 
                     </p>
                     <h2 class="intro-title mb-4 ">
-                      <span class="color-b"></span>Kila Oils Company
+                      <span class="color-b"></span>Kila Group
                       
                     </h2>
                     <h3 h3 style="color:#fff ;text-transform: uppercase;">We offer you a variety of pure extracted oils
@@ -385,13 +385,13 @@ Cardiovascular disease, as well as reducing inflammation.
                         <br>
                         Nutritional values ​​(13.6) grams of cottonseed oil, 
                         which is equivalent to one tablespoon, according to the USDA:
-                        <br>for example
+                        <br>for example :-
                         <br>120 calories
-                        <br>13.6 g >> fat
-                        <br>4.8 milligrams >> Vitamin E
-                        <br>3.36 mcg >> Vitamin K
-                        <br>2.42 g >> Fatty acids (monounsaturated)
-                        <br>7.06 g >> Fatty acids (polyunsaturated)
+                        <br>13.6 g >>  <span style="padding:120px ;"> fat</span> 
+                        <br>4.8 milligrams >>  <span style="padding:65px ;"> Vitamin E</span>  
+                        <br>3.36 mcg >>   <span style="padding:100px ;">Vitamin K</span>
+                        <br>2.42 g  >> <span style="padding:120px ;">Fatty acids (monounsaturated)</span>
+                        <br>7.06 g  >> <span style="padding:120px ;">Fatty acids (polyunsaturated)</span> 
                       </p>
                     </div>
                     
