--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
               </div>
               <div class="col-lg-2  d-none d-lg-block position-relative">
                 <div class="title-vertical d-flex justify-content-start">
-                  <span>Kila Oils Company</span>
+                  <span>Kila Group</span>
                 </div>
               </div>
               <div class="col-md-6 col-lg-5 section-md-t3">
